--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-    "name": "drupal",
+    "name": "drupal-object",
     "version": "1.0.0",
     "description": "",
     "main": "",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
         "update": "node src/updateDrupal.js"
     },
     "eslintIgnore": [
@@ -14,30 +13,7 @@
     ],
     "author": "",
     "license": "ISC",
-    "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^8.2.6",
-        "babel-plugin-transform-async-to-generator": "^6.24.1",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.6.1",
-        "babelify": "^8.0.0",
-        "cssnano": "^4.0.5",
-        "eslint": "^4.15.0",
-        "eslint-config-airbnb": "^16.1.0",
-        "eslint-config-prettier": "^2.9.0",
-        "eslint-plugin-import": "^2.13.0",
-        "eslint-plugin-jsx-a11y": "^6.1.1",
-        "eslint-plugin-prettier": "^2.6.2",
-        "eslint-plugin-react": "^7.10.0",
-        "prettier-eslint": "^8.8.2",
-        "uglifyify": "^4.0.5",
-        "grunt": "^1.0.1",
-        "grunt-babel": "^7.0.0",
-        "grunt-browserify": "^5.2.0",
-        "grunt-cli": "^1.2.0",
-        "grunt-contrib-watch": "^1.0.0",
-        "grunt-notify": "^0.4.5"
-    },
+    "devDependencies": {},
     "dependencies": {
         "babel-polyfill": "^6.26.0",
         "babel-preset-es2015": "^6.24.1",
